--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,13 @@
     font-family: 'Roboto', sans-serif;
 }   
 
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
+
 .center{
     display: block;
     margin-left: auto;
