--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,10 @@
 }   
 
 html, body {
-  overflow-x: hidden;
+    max-width: 100%;
+    overflow-x: hidden;
 }
-body {
-  position: relative
-}
+
 
 .center{
     display: block;
