--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ html, body {
 }
 
 
+
+
 .center{
     display: block;
     margin-left: auto;
@@ -29,7 +31,7 @@ html, body {
 
 .wrapper .sidebar{
     position: fixed;
-    width: 200px;
+    width: 25%;
     height: 100%;
     background: #006622;
     padding: 30px;
@@ -48,15 +50,41 @@ html, body {
       color: #003311;
 }
 
+.wrapper .main{
+    width: 100%;
+    margin-left: 25%;
+    text-align: center;
+}
+
+@media (max-width: 700px) {
+     *{
+         box-sizing:border-box;
+     }
+     .wrapper .sidebar{
+         width: 100%;
+         height: auto;
+         text-align: center;
+         position: fixed;
+         bottom: .0 
+     }
+     .wrapper .sidebar ul{
+         list-style: none;
+         padding: 0;
+         margin: 0;
+     }
+     .wrapper .sidebar ul li{
+         display: inline-block;
+         padding: 10px;
+         width: calc(100vw/4.6);
+     }
+}
+
 .wrapper .sidebar ul li a:focus{
     background-color: aqua;
 }
 
 
-.wrapper .main{
-    width: 100%;
-    margin-left: 200px;
-}
+
 
 [name="test"]{
     width: 350;
