--- a/styles.css
+++ b/styles.css
@@ -1,103 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-}   
-
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
-
-
-
-.center{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-.wrapper{
-    display: flex;
-    position: relative;
-}
-
-.wrapper .sidebar{
-    position: fixed;
-    width: 25%;
-    height: 100%;
-    background: #006622;
-    padding: 30px;
-    
-}
-
-.wrapper .sidebar ul li{
-    padding: 15px;
-    border-bottom: 1px solid rgba(0,0,0,0.05);
-    border-top: 1px solid rgba(225,225,225,0.05);
-    color: #e6ffee;
-}
-
-.wrapper .sidebar ul li:hover {
-      background-color: #00802b;
-      color: #003311;
-}
-
-.wrapper .main{
-    width: 100%;
-    margin-left: 25%;
-    text-align: center;
-}
-
-@media (max-width: 700px) {
-     *{
-         box-sizing:border-box;
-     }
-     .wrapper .sidebar{
-         width: 100%;
-         height: auto;
-         text-align: center;
-         position: fixed;
-         bottom: .0 
-     }
-     .wrapper .sidebar ul{
-         list-style: none;
-         padding: 0;
-         margin: 0;
-     }
-     .wrapper .sidebar ul li{
-         display: inline-block;
-         padding: 10px;
-         width: calc(100vw/4.6);
-     }
-}
-
-.wrapper .sidebar ul li a:focus{
-    background-color: aqua;
-}
-
-
-
-
-[name="test"]{
-    width: 350;
-}
-
-#poemhead::first-line {
-    color: #00802b;
-}
-
-div > h1{
-    color: #003311;
-}
-
-body{
-    background: #F0FFF0;
+p{
+ color: blue;   
 }
